Addressing WAVE accessibility issues - missing alt text, button colour contrast and empty table header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -161,8 +161,8 @@ div.content {
 }
 
 .register-button {
-    background-color: #EE6382;
-    border-color: #EE6382;
+    background-color: #008667;
+    border-color: #008667;
 }
 
 .login-button {
